--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,20 @@
-gitignore
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Compiled output
-#/dist
+# compiled output
 /dist
+/tmp
+/out-tsc
 
-# Dependencies
+# dependencies
 /node_modules
 
-# Cordova
-/www
-/plugins
-/platforms
-
-# Protractor
-/~/.e2e-chrome-profile
-/protractorFailuresReport
-
 # IDEs and editors
-.idea/*
-!.idea/runConfigurations/
-!.idea/codeStyleSettings.xml
+/.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
-xcuserdata/
 *.sublime-workspace
 
 # IDE - VSCode
@@ -36,11 +24,7 @@ xcuserdata/
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# Maven
-/target
-/log
-
-# Misc
+# misc
 /.sass-cache
 /connect.lock
 /coverage
@@ -49,11 +33,6 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-/reports
-/.test-output
-/src/translations/template.*
-/src/environments/.env.*
-*.orig
 
 # System Files
 .DS_Store
